tests/baselines/reference/structExtendsItself.errors.txt
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendsItself.ts(1,8): error TS2310: Type 'C' recursively references itself as a base type.


==== tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendsItself.ts (1 errors) ====
    struct C extends C { } // error
           ~
!!! error TS2310: Type 'C' recursively references itself as a base type.
    
    // struct D<T> extends D<T> { } //  error
    
    // struct E<T> extends E<string> { } // error